2008-07-09  Andy Buckley  <andy@insectnation.org>

	* Trialling use of "foreach" loop in CDF_2004: it works! Very nice.

2008-07-08  Andy Buckley  <andy@insectnation.org>

	* Removed accidental reference to an "FS" projection in
	FinalStateHCM's compare method. rivetgun -A now works again.

	* Added TASSO, SLD and D0_2008 reference data. The TASSO and SLD
	papers aren't installed or included in the tarball since there are
	currently no plans to implement these analyses.

	* Added Rivet namespacing to vector, matrix etc. classes. This
	required some re-writing and the opportunity was taken to move
	some canonical function definitions inside the classes and to
	improve the header structure of the Math area.

2008-07-07  Andy Buckley  <andy@insectnation.org>

	* Added Rivet namespace to Units.hh and Constants.hh.

	* Added Doxygen "@brief" flags to analyses.

	* Added "RIVET_" namespacing to all header guards.

	* Merged Giulio Lenzi's isolation/vetoing/invmass projections and
	D0 2008 analysis.

2008-06-23  Jon Butterworth  <J.Butterworth@ucl.ac.uk>

	* Modified FastJet to fix ysplit and split and filter.

	* Modified ExampleTree to show how to call them.

2008-06-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added first version of the CDF_2008_DRELLYAN analysis described on
	  http://www-cdf.fnal.gov/physics/new/qcd/abstracts/UEinDY_08.html
	  There is a small difference between the analysis and this
	  implementation, but it's too small to be visible.
	  The fpythia-cdfdrellyan.params parameter file is for this analysis.

	* Added first version of the CDF_2008_MINBIAS analysis described on
	  http://www-cdf.fnal.gov/physics/new/qcd/abstracts/minbias_08.html
	  The .aida file is read from the plots on the web and will change.
	  I'm still discussing some open questions about the analysis with
	  the author.

2008-06-18  Jon Butterworth  <J.Butterworth@ucl.ac.uk>

	* Added First versions of splitJet and filterJet methods to
	fastjet.cc. Not yet tested, buyer beware.
